Allow clobbering existing values with forward_variables_from
Change-Id: Ia09617a3794dc4358c0d4bfe7dd0912f5425370a

--- a/examples/simple_build/BUILD.gn
+++ b/examples/simple_build/BUILD.gn
@@ -2,6 +2,13 @@
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
+template("foo_test") {
+  config(target_name) {
+    example_flag = "-foo"
+    forward_variables_from(invoker, [ "example_flag" ])
+  }
+}
+
 executable("hello") {
   sources = [ "hello.cc" ]
 
