Demo to build bazel files
Change-Id: Ie32e1c3668e53ecd497c3d763ab944dff93db751

--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,8 @@ Thumbs.db
 /_out
 # VSChromium configuration file
 vs-chromium-project.txt
+BUILD.bazel
+bazel-*
+.bazel_updated
+.gn_modified
+.gn_bazel_daemon_pid
