Building with working toolchain
Change-Id: I2cb14bf789ef3b2a885d0023e6c786e5f46281aa

--- a/examples/simple_build/BUILD.gn
+++ b/examples/simple_build/BUILD.gn
@@ -9,7 +9,7 @@ group("foobar") {
 if (current_toolchain != default_toolchain ) {
   executable("hello") {
     output_dir = root_build_dir
-    output_name = "foobar"
+    # output_name = "foobar"
     sources = [ "hello.cc" ]
   }
 }
