--- a/examples/simple_build/BUILD.gn
+++ b/examples/simple_build/BUILD.gn
@@ -2,6 +2,10 @@
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
+test_string = "//foo/bar:*"
+x = get_label_info(test_string, "toolchain")
+print(x)
+
 executable("hello") {
   sources = [ "hello.cc" ]
 
