Fix sorting imports with comments
When an `import` is preceeded by a comment, the formatter attempts to
split it into a new block by inserting an extra newline. This causes the
imports to be pushed down an extra line and overwrite an empty line at
the end of the group.

This fix simplifies the import sorting logic to treat comments the same
way as lists: treat all `import` calls in the group attached to the
comment as a single group. After sorting the imports, the comment is
pushed up to the top of the group.

Bug: 436300913
Change-Id: I000c7bbbbd3f8ffb84814fc2ce32c566f8671452

--- a/src/gn/format_test_data/075.gn
+++ b/src/gn/format_test_data/075.gn
@@ -9,3 +9,7 @@ import("stuff.gni")
 # warning.
 import("//build/config/mac/mac_sdk_overrides.gni")
 import("//build/config/ios/ios_sdk_overrides.gni")
+
+if (condition) {
+  import("more_stuff.gni")
+}
